feat: clean backend finished, perform tests